// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LandingView renders default render is as expected 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <Mood
      mood=""
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Button))
      aria-label="update mood"
      color="secondary"
      endIcon={<Memo(UpdateIcon) />}
      onClick={[Function]}
      size="large"
      variant="outlined"
    >
      Update mood
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`LandingView renders mood confused is rendered as expected 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <Mood
      mood="confused"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Button))
      aria-label="update mood"
      color="secondary"
      endIcon={<Memo(UpdateIcon) />}
      onClick={[Function]}
      size="large"
      variant="outlined"
    >
      Update mood
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`LandingView renders mood hungry is rendered as expected 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <Mood
      mood="hungry"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Button))
      aria-label="update mood"
      color="secondary"
      endIcon={<Memo(UpdateIcon) />}
      onClick={[Function]}
      size="large"
      variant="outlined"
    >
      Update mood
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`LandingView renders mood sad is rendered as expected 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <Mood
      mood="sad"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Button))
      aria-label="update mood"
      color="secondary"
      endIcon={<Memo(UpdateIcon) />}
      onClick={[Function]}
      size="large"
      variant="outlined"
    >
      Update mood
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`LandingView renders mood tired is rendered as expected 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <Mood
      mood="tired"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Button))
      aria-label="update mood"
      color="secondary"
      endIcon={<Memo(UpdateIcon) />}
      onClick={[Function]}
      size="large"
      variant="outlined"
    >
      Update mood
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
